standards/gnds-2.0/try/c/src/v2.0/appData/Institution.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// Institution is the basic handle type in this file. Example:
//    // Create a default Institution object:
//    Institution handle = InstitutionDefault();
// Functions involving Institution are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_APPDATA_INSTITUTION
#define C_INTERFACE_TRY_V2_0_APPDATA_INSTITUTION

#include "GNDStk.h"
#include "v2.0/appData/ENDFconversionFlags.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct InstitutionClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Institution
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct InstitutionClass *Institution;

// --- Const-aware handles.
typedef const struct InstitutionClass *const ConstHandle2ConstInstitution;
typedef       struct InstitutionClass *const ConstHandle2Institution;
typedef const struct InstitutionClass *      Handle2ConstInstitution;
typedef       struct InstitutionClass *      Handle2Institution;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstInstitution
InstitutionDefaultConst();

// +++ Create, default
extern_c Handle2Institution
InstitutionDefault();

// --- Create, general, const
extern_c Handle2ConstInstitution
InstitutionCreateConst(
   const XMLName label,
   ConstHandle2ConstENDFconversionFlags ENDFconversionFlags
);

// +++ Create, general
extern_c Handle2Institution
InstitutionCreate(
   const XMLName label,
   ConstHandle2ConstENDFconversionFlags ENDFconversionFlags
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
InstitutionAssign(ConstHandle2Institution This, ConstHandle2ConstInstitution from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
InstitutionDelete(ConstHandle2ConstInstitution This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
InstitutionRead(ConstHandle2Institution This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
InstitutionWrite(ConstHandle2ConstInstitution This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
InstitutionPrint(ConstHandle2ConstInstitution This);

// +++ Print to standard output, as XML
extern_c int
InstitutionPrintXML(ConstHandle2ConstInstitution This);

// +++ Print to standard output, as JSON
extern_c int
InstitutionPrintJSON(ConstHandle2ConstInstitution This);


// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
InstitutionLabelHas(ConstHandle2ConstInstitution This);

// +++ Get
// +++ Returns by value
extern_c XMLName
InstitutionLabelGet(ConstHandle2ConstInstitution This);

// +++ Set
extern_c void
InstitutionLabelSet(ConstHandle2Institution This, const XMLName label);


// -----------------------------------------------------------------------------
// Child: ENDFconversionFlags
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
InstitutionENDFconversionFlagsHas(ConstHandle2ConstInstitution This);

// --- Get, const
extern_c Handle2ConstENDFconversionFlags
InstitutionENDFconversionFlagsGetConst(ConstHandle2ConstInstitution This);

// +++ Get, non-const
extern_c Handle2ENDFconversionFlags
InstitutionENDFconversionFlagsGet(ConstHandle2Institution This);

// +++ Set
extern_c void
InstitutionENDFconversionFlagsSet(ConstHandle2Institution This, ConstHandle2ConstENDFconversionFlags ENDFconversionFlags);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif